* Refactoring to allow deploy of shaded version * Moved tests on different packages